--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
   text-align: right;
 }
 
-.header img {
+.header__image {
   width: 100%;
 }
 
-.header .header__link {
+.header__link {
   font-family: fantasy, cursive;
 }
 
@@ -44,22 +44,26 @@
   display: flex;
 }
 
-ul {
+.section__list {
   margin: 0;
   padding: 0px;
 }
 
-li, 
-h3 {
+.list__item, 
+.section__title {
   list-style: none;
 }
 
-input,
-button {
+.section__input,
+.list__checkbox,
+.list__input,
+.button,
+.list__button {
   outline: none;
 }
 
-button {
+.button,
+.list__button {
   background: none;
   border: 0px;
   color: #888;
@@ -69,13 +73,14 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover,
+.list__button:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.section__title,
+.section__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +90,8 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.section__input_add,
+.list__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,22 +104,23 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.section__input_add:focus,
+.list__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.section__label {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.section__input_add {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -122,51 +129,54 @@ li {
   align-items: center;
 }
 
-li > * {
+.list__checkbox,
+.list__label,
+.list__input,
+.list__button {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list__checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.list__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li >    input[type="text"] {
+.list__input {
   width: 226px;
 }
 
-button.list__button_delete img {
+.button_icon {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.list__button_delete img:hover {
+.button_icon:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul.section__list_completed label {
+.section__list_completed .list__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.list__input {
   display: none;
 }
 
-ul li.list__item_edit input[type="text"] {
+.list__item_edit .list__input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.list__item_edit label {
+.list__item_edit .list__label {
   display: none;
 }
